[tool.poetry]
name = "wav2lip"
version = "0.1.0"
description = ""
authors = ["tetsuyawakita <wakita181009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "*"
opencv-contrib-python = "*"
opencv-python = "*"
torch = "*"
torchvision = "*"
tqdm = "*"
numba = "*"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
